# probability

./: .travis.yml  Cargo.toml  LICENSE.md  LICENSE.txt  README.md
.github/workflows/: build.yml
benches/: lib.rs
benches/distribution/: beta.rs  binomial.rs  categorical.rs  cauchy.rs  gaussian.rs  mod.rs
benches/distributions/: beta.rs  binomial.rs  gaussian.rs  mod.rs
examples/: rand.rs
src/: lib.rs  prelude.rs
src/distribution/: bernoulli.rs  beta.rs  binomial.rs  categorical.rs  cauchy.rs  exponential.rs  gamma.rs  gaussian.rs  laplace.rs  logistic.rs  lognormal.rs  mod.rs  pert.rs  triangular.rs  uniform.rs
src/distributions/: bernoulli.rs  beta.rs  binomial.rs  categorical.rs  exponential.rs  gamma.rs  gaussian.rs  mod.rs  uniform.rs
src/generator/: mod.rs  xorshift.rs
src/generators/: mod.rs
src/sampler/: mod.rs
src/source/: mod.rs
