[package]
name = "probability"
version = "0.18.0"
license = "Apache-2.0/MIT"
authors = [
    "Brian Knapp <knappador@gmail.com>",
    "Denis Kolodin <deniskolodin@gmail.com>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Jon Lund Steffensen <jonlst@gmail.com>",
    "Marek Baczyński <imbaczek@gmail.com>",
    "Robert Bamler <robert.bamler@uni-tuebingen.de>",
    "Rúnar Berg Baugsson Sigríðarson <runarberg@zoho.com>",
    "Yuki Nagae <y-nagae@aptpod.co.jp>",
]
description = "The package provides a probability-theory toolbox."
documentation = "https://docs.rs/probability"
homepage = "https://github.com/stainless-steel/probability"
repository = "https://github.com/stainless-steel/probability"
readme = "README.md"
categories = ["algorithms", "science"]
keywords = ["distribution", "probability", "sampling", "statistics", "random"]

[features]
default = ["std", "system_math"]

# Activating feature "system_math" (which is the default) instructs `probability`
# to use the system math C library for mathematical operations. Deactivate this
# default feature if no system math C library is available on your compilation
# target (e.g., if you compile to WebAssembly, or if you want test for undefined
# behaviour using `miri`).
system_math = ["special/system_math"]

# Feature "std" is active by default. Deactivate it if you want to compile to a
# `no_std` target (e.g., a microcontroller). You'll likely want to deactivate
# feature "system_math" as well in this case.
std = ["special/std"]

[dependencies]
random = "0.12"
# FIXME: use upstream version of `special` if proposed changes get accepted.
# special = {path = "../special", default-features = false}
special = {git = "https://github.com/robamler/special.git", rev = "16708ea249ec56fbebfcc91b413142f01671ebd9", default-features = false}

[dev-dependencies]
assert = "0.7"
rand = "0.5"
